--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -184,7 +184,7 @@
     "countries": ["CN"]
   },
   "APT41": {
-    "full_aliases": ["BARIUM", "Brass Typhoon"],
+    "full_aliases": ["BARIUM", "Brass Typhoon", "Wicked Panda"],
     "subgroups": ["Earth Lusca", "Earth Longzhi"],
     "countries": ["CN"]
   },
