--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -625,5 +625,9 @@
   },
   "UNC4191": {
     "countries": ["CN"]
+  },
+  "DragonOK": {
+    "full_aliases": ["Bronze Overbook"],
+    "countries": ["CN"]
   }
 }
