--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -631,5 +631,9 @@
     "countries": ["CN"]
   },
   "SowBug": {
+  },
+  "Patchwork": {
+    "full_aliases": ["Dropping Elephant", "Chinastrats"],
+    "countries": ["IN"]
   }
 }
