--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -635,5 +635,7 @@
   "Patchwork": {
     "full_aliases": ["Dropping Elephant", "Chinastrats"],
     "countries": ["IN"]
+  },
+  "Daixin Team": {
   }
 }
