--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -604,7 +604,8 @@
     "countries": ["CN"]
   },
   "Volatile Cedar": {
-    "full_aliases": ["Lebanese Cedar", "DeftTorero"]
+    "full_aliases": ["Lebanese Cedar", "DeftTorero"],
+    "countries": ["LB"]
   },
   "Lilac Wolverine": {
   },
