--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -82,6 +82,10 @@
   },
   "APT27": {
   },
+  "Emissary Panda": {
+  },
+  "Goblin Panda": {
+  },
   "APT28": {
     "full_aliases": ["Fancy Bear", "Sofacy", "Strontium", "Grizzly Steppe", "Sednit", "SIG40", "Group 74", "PawnStorm",
       "Snakemackerel", "TG-4127", "Tsar Team", "Blue Athena", "IRON TWILIGHT", "Swallowtail", "Threat Group-4127", "Forest Blizzard"],
