--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -348,8 +348,7 @@
   },
   "DLTminer": {
   },
-  "Mikroceen": {
-    "full_aliases": ["SixLittleMonkeys"]
+  "SixLittleMonkeys": {
   },
   "Websiic": {
   },
