--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -734,5 +734,8 @@
   "Sprite Spider": {
   },
   "FunnyDream": {
+  },
+  "COLDRIVER": {
+    "full_aliases": ["Callisto", "CALISTO", "Blue Callisto", "Callisto Group", "TAG-53"]
   }
 }
