--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -737,5 +737,7 @@
   },
   "COLDRIVER": {
     "full_aliases": ["Callisto", "CALISTO", "Blue Callisto", "Callisto Group", "TAG-53"]
+  },
+  "BellTroX InfoTech Services": {
   }
 }
