--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -739,5 +739,7 @@
     "full_aliases": ["Callisto", "CALISTO", "Blue Callisto", "Callisto Group", "TAG-53"]
   },
   "BellTroX InfoTech Services": {
+  },
+  "TeamTNT": {
   }
 }
