--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -99,7 +99,7 @@
   },
   "APT29": {
     "full_aliases": ["Cozy Bear", "The Dukes", "Nobelium", "UNC2452", "YTTRIUM", "IRON HEMLOCK", "Dark Halo", "NOBELIUM",
-      "StellarParticle", "UNC2452", "Blue Kitsune", "CozyDuke", "NobleBaron", "HotCousin", "Midnight Blizzard"],
+      "StellarParticle", "UNC2452", "Blue Kitsune", "CozyDuke", "NobleBaron", "HotCousin", "Midnight Blizzard", "UNC3524", "Cranefly"],
     "organisations": ["Foreign Intelligence Service", "SVR"],
     "countries": ["RU"]
   },
