--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -765,5 +765,8 @@
   "NTC Vulkan": {
   },
   "UNC4466": {
+  },
+  "Evasive Panda": {
+    "full_aliases": ["BRONZE HIGHLAND", "Daggerfly"]
   }
 }
