--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -487,7 +487,7 @@
     "full_aliases": ["TA505"]
   },
   "Charcoal Typhoon": {
-    "full_aliases": ["ControlX"],
+    "full_aliases": ["ControlX", "CHROMIUM", "BRONZE UNIVERSITY", "RedHotel"],
     "countries": ["CN"]
   },
   "TortoiseShell": {
