--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -776,5 +776,15 @@
   "YoroTrooper": {
   },
   "UNC4166": {
+  },
+  "UNC3886": {
+  },
+  "UCID902": {
+  },
+  "TA866": {
+  },
+  "TA558": {
+  },
+  "TACTICAL#OCTOPUS": {
   }
 }
