--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -786,5 +786,10 @@
   "TA558": {
   },
   "TACTICAL#OCTOPUS": {
+  },
+  "DEV-0569": {
+  },
+  "LightBasin": {
+    "full_aliases": ["UNC1945"]
   }
 }
