--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -327,7 +327,7 @@
     "full_aliases": ["Karma Panda", "Tonto Team", "BRONZE HUNTLEY"]
   },
   "BlackTech": {
-    "full_aliases": ["Palmerworm", "BRONZE CANAL", "Circuit Panda", "CTG-6177", "Shrouded Crossbow"]
+    "full_aliases": ["Palmerworm", "BRONZE CANAL", "Circuit Panda", "CTG-6177", "Shrouded Crossbow", "Temp.Overboard", "Radio Panda"]
   },
   "Water Bear": {
     "campaigns": ["PLEAD", "Shrouded Crossbow"]
