--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -452,7 +452,7 @@
   "Kimsuky": {
   },
   "EMBER BEAR": {
-    "full_aliases": ["UAC-0056", "Lorec53", "Lorec Bear", "Bleeding Bear", "Saint Bear"],
+    "full_aliases": ["UAC-0056", "Lorec53", "Lorec Bear", "Bleeding Bear", "Saint Bear", "Nodaria"],
     "countries": ["RU"]
   },
   "MontysThree": {
