Add Sandworm alias

--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -269,7 +269,7 @@
   },
   "Sandworm": {
     "full_aliases": ["Electrum", "Telebots", "BlackEnergy", "Quedagh", "Voodoo Bear", "CTG-7263",
-      "Hades", "OlympicDestroyer", "IRIDIUM", "TEMP.Noble", "IRON VIKING", "Seashell Blizzard"],
+      "Hades", "OlympicDestroyer", "IRIDIUM", "TEMP.Noble", "IRON VIKING", "Seashell Blizzard", "FROZENBARENTS"],
     "subgroups": ["Kamacite"],
     "organisations": ["Unit 74455 of the Main Center of Special Technologies", "GTsST",
       "Main Directorate of the General Staff of the Armed Forces", "GRU"],
