--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -145,7 +145,8 @@
     "countries": ["PK"]
   },
   "APT37": {
-    "subgroups": ["TA406"]
+    "full_aliases": ["Thallium", "Reaper", "ScarCruft", "InkySquid", "Velvet Chollima", "Konni Group", "Black Banshee", "Group 123", "RICOCHET CHOLLIMA", "NICKEL FOXCROFT", "NICKEL KIMBALL", "SharpTongue", "RedEyes", "Emerald Sleet"],
+    "countries": ["KP"]
   },
   "TA406": {
   },
@@ -453,6 +454,7 @@
   "TEMP.Hermit": {
   },
   "Kimsuky": {
+    "subgroups": ["TA406", "TA408", "TA427"]
   },
   "EMBER BEAR": {
     "full_aliases": ["UAC-0056", "Lorec53", "Lorec Bear", "Bleeding Bear", "Saint Bear", "Nodaria"],
