--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -13,7 +13,7 @@
     "full_aliases": ["UPS Team", "Gothic Panda", "TG-0110", "BRONZE MAYFAIR", "Buckeye", "Red Sylvan"]
   },
   "APT4": {
-    "full_aliases": ["Maverick Panda", "Sykipot Group", "Wisp", "BRONZE EDISON", "TG-0623"]
+    "full_aliases": ["Maverick Panda", "Sykipot Group", "Wisp", "BRONZE EDISON", "TG-0623", "Salmon Typhoon"]
   },
   "APT5": {
     "full_aliases": ["BRONZE FLEETWOOD", "DPD", "Keyhole Panda", "Poisoned Flight", "TG-2754", "MANGANESE", "TABCTENG", "Mulberry Typhoon"],
