Add missing country

--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -455,6 +455,7 @@
   },
   "Kimsuky": {
     "subgroups": ["TA406", "TA408", "TA427"]
+    "countries": ["KP"]
   },
   "EMBER BEAR": {
     "full_aliases": ["UAC-0056", "Lorec53", "Lorec Bear", "Bleeding Bear", "Saint Bear", "Nodaria"],
