--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -866,7 +866,7 @@
   "Safari Elf": {
   },
   "Vanguard Panda": {
-    "full_aliases": ["Volt Typhoon", "BRONZE SILHOUETTE", "Dev-0391", "UNC3236", "Voltzite", "Insidious Taurus"]
+    "full_aliases": ["Volt Typhoon", "BRONZE SILHOUETTE", "Dev-0391", "UNC3236", "Voltzite", "Insidious Taurus"],
     "countries": ["CN"]
   }
 }
