--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -454,7 +454,7 @@
   "TEMP.Hermit": {
   },
   "Kimsuky": {
-    "subgroups": ["TA406", "TA408", "TA427"]
+    "subgroups": ["TA406", "TA408", "TA427"],
     "countries": ["KP"]
   },
   "EMBER BEAR": {
