Add Cottage Elf

--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -868,5 +868,7 @@
   "Vanguard Panda": {
     "full_aliases": ["Volt Typhoon", "BRONZE SILHOUETTE", "Dev-0391", "UNC3236", "Voltzite", "Insidious Taurus"],
     "countries": ["CN"]
+  },
+  "Cottage Elf": {
   }
 }
