--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -895,5 +895,10 @@
   "TA577": {
   },
   "TA581": {
+  },
+  "TraderTraitor": {
+    "full_aliases": ["UNC4899"],
+    "organisations": ["Reconnaissance General Bureau"],
+    "countries": ["KP"]
   }
 }
