--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -900,5 +900,7 @@
     "full_aliases": ["UNC4899"],
     "organisations": ["Reconnaissance General Bureau"],
     "countries": ["KP"]
+  },
+  "Scrap Elf": {
   }
 }
