Add North Korea updates

--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -159,12 +159,8 @@
     "countries": ["KP"]
   },
   "APT38": {
-    "full_aliases": ["Lazarus Group", "Hidden Cobra", "Guardians of Peace", "NICKEL ACADEMY", "Black Artemis",
-      "COVELLITE", "CTG-2460", "Dark Seoul", "High Anonymous", "Labyrinth Chollima", "New Romanic Cyber Army Team",
-      "NNPT Group", "Who Am I?", "Whois Team", "ZINC", "TA404", "APT-C-26", "Diamond Sleet"],
-    "subgroups": ["AndAriel"],
-    "countries": ["KP"],
-    "campaigns": ["Operation AppleJeus", "Operation Dream Job"]
+    "full_aliases": ["TraderTraitor"],
+    "partial_aliases": ["CryptoCore"],
   },
   "BlueNorOff": {
     "full_aliases": ["Stardust Chollima", "BeagleBoyz", "CTG-6459", "NICKEL GLADSTONE", "COPERNICIUM", "Genie Spider", "Sapphire Sleet"],
@@ -208,6 +204,18 @@
   "Tianwu": {
   },
   "APT42": {
+  },
+  "APT43": {
+    "partial_aliases": ["CryptoCore"],
+  },
+  "APT44": {
+  },
+  "APT45": {
+    "full_aliases": ["Lazarus Group", "Hidden Cobra", "Guardians of Peace", "NICKEL ACADEMY", "Black Artemis",
+      "COVELLITE", "CTG-2460", "Dark Seoul", "High Anonymous", "Labyrinth Chollima", "New Romanic Cyber Army Team",
+      "NNPT Group", "Who Am I?", "Whois Team", "ZINC", "TA404", "APT-C-26", "Diamond Sleet"],
+    "subgroups": ["AndAriel"],
+    "countries": ["KP"],
   },
   "FIN6": {
     "full_aliases": ["ITG08", "MageCart Group 6", "Skeleton Spider", "White Giant", "GOLD FRANKLIN", "TAAL", "Camouflage Tempest"]
