Add Red Delta aliases

--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -345,7 +345,7 @@
     "campaigns": ["PLEAD", "Shrouded Crossbow"]
   },
   "Red Delta": {
-    "full_aliases": ["BRONZE PRESIDENT", "HoneyMyte", "Red Lich", "Temp.Hex", "Earth Preta", "Mustang Panda"],
+    "full_aliases": ["BRONZE PRESIDENT", "HoneyMyte", "Red Lich", "Temp.Hex", "Earth Preta", "Mustang Panda", "Stately Taurus", "Luminous Moth", "Camaro Dragon"],
     "subgroups": ["Groups 724", "Group 1358", "Group 5171"],
     "countries": ["CN"]
   },
