Add Water Gamayun

--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -948,5 +948,8 @@
   "Window Elf": {
   },
   "CosmicBeetle": {
+  },
+  "Water Gamayun": {
+    "full_aliases": ["EncryptHub", "Larva-208"]
   }
 }
