--- a/cta_names_mappings.json
+++ b/cta_names_mappings.json
@@ -1026,5 +1026,9 @@
   "Accumulation Elf": {
   },
   "Dadsec": {
+  },
+  "RedNovember": {
+    "full_aliases": ["TAG-100"],
+    "partial_aliases": ["Storm-2077"]
   }
 }
